Bug 761990 - The Feedback button's dropdown arrow overlaps the label. r=jaws
UltraBlame original commit: e5fb6d6aad0d7212e764b028b21551dbfd46ab90

--- a/browser/themes/winstripe/browser.css
+++ b/browser/themes/winstripe/browser.css
@@ -708,7 +708,8 @@ toolbar[mode=full] .toolbarbutton-1 > .toolbarbutton-menubutton-button {
   padding: 3px 7px;
 }
 
-@navbarLargeIcons@ .toolbarbutton-1[type=menu]:not(#back-button):not(#forward-button):not(#feed-button) > .toolbarbutton-icon {
+@navbarLargeIcons@ .toolbarbutton-1[type=menu]:not(#back-button):not(#forward-button):not(#feed-button) > .toolbarbutton-icon,
+@navbarLargeIcons@ .toolbarbutton-1[type=menu] > .toolbarbutton-text  {
   -moz-padding-end: 17px;
 }
 
@@ -1443,6 +1444,10 @@ html|*.urlbar-input:-moz-lwtheme:-moz-placeholder,
 
 .verifiedIdentity > #page-proxy-favicon[pageproxystate="valid"] {
   list-style-image: url(chrome://browser/skin/identity-icons-https-ev.png);
+}
+
+.mixedContent > #page-proxy-favicon[pageproxystate="valid"] {
+  list-style-image: url(chrome://browser/skin/identity-icons-https-mixed.png);
 }
 
 #identity-box:hover > #page-proxy-favicon {
